Practising react-hook-forms

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+* {
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	background-color: bisque;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form.tags {
+	background-color: rgb(196, 176, 176);
+	display: flex;
+	width: fit-content;
+	padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tags input {
+	border: none;
+	outline: none;
+	font-size: 18px;
+	background-color: rgb(196, 176, 176);
+	/* border-bottom: 1px solid black; */
+}
+ul {
+	list-style-type: none;
+	display: flex;
+	margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+ul li {
+	padding: 5px 10px;
+	background-color: antiquewhite;
+	margin-right: 10px;
+	border-radius: 20px;
+	/* width: fit-content; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul li i {
+	margin-left: 10px;
+	font-size: small;
+	padding: 3px;
+	border-radius: 50px;
+	transition: all ease 0.5s;
+}
+
+ul li i:hover {
+	background-color: rgb(236, 113, 113);
+	transition: all ease 0.5s;
+}
+
+form.category {
+	display: flex;
+}
+
+form.category input {
+	border: none;
+	padding: 10px;
+	outline: none;
+	font-size: 18px;
+	border-radius: 4px;
+	background-color: rgb(119, 156, 144);
+	margin-right: 40px;
+}
+
+form.category select {
+	border: none;
+	padding: 10px;
+	margin-right: 40px;
+	outline: none;
+	font-size: 18px;
+	border-radius: 4px;
+	background-color: rgb(119, 156, 144);
+}
+
+form.attribute {
+	display: flex;
+	align-items: flex-end;
+}
+
+form.attribute input {
+	border: none;
+	padding: 10px;
+	outline: none;
+	font-size: 18px;
+	border-radius: 4px;
+	background-color: rgb(119, 156, 144);
+	margin-right: 40px;
+}
+
+form.attribute button {
+	height: fit-content;
+	border: none;
+	padding: 10px;
+	outline: none;
+	font-size: 18px;
+	border-radius: 4px;
+	background-color: rgb(120, 177, 177);
+}
+
+.attribute_lists ul {
+	display: flex;
+	flex-direction: column;
+}
+
+.attribute_lists ul li {
+	width: fit-content;
 }
